# Sectur_uvm

./: README.md  pyproject.toml
turismo/: settings.py  urls.py
turismo/registro/: admin.py  models.py
turismo/registro/migrations/: 0001_initial.py  0002_auto_20210206_1955.py  0003_auto_20210206_1958.py  0004_auto_20210206_2001.py
