[tool.poetry]
name = "sectur_uvm"
version = "0.1.0"
description = ""
authors = ["Gazmatem <gazmatem@ciencias.unam.mx>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.6"
django-admin = "^2.0.1"
mysqlclient = "^2.0.3"
django-allauth = "^0.44.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
